--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.8.3",
+    "bcrypt": "^4.0.1",
     "jquery": "^3.4.1",
     "meteor-node-stubs": "^1.0.0",
     "react": "^16.13.1",
